# FTSerialTool

./: .gitignore  README.md  app.js  index.html  main.js  package-lock.json  package.json  preload.js  protocol-parser.js  styles.css
.github/workflows/: release.yml
deploy/baota/: ecosystem.config.js  setup.sh
docs/: jcom-design-notes.md  project-structure.md  update-server.md
scripts/: clean.ps1  compact-win.ps1  package-portable-win.ps1  package-update-server-win.ps1  package-win.ps1  publish-github.ps1  test-protocol-parser.js  update-server-core.js  update-server.js
server/: Dockerfile  README.md  docker-compose.yml  launcher.js  package-lock.json  package.json  start.js
src/: app.js  i18n.js  index.html  main.js  preload.js  styles.css  tauri-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  serial.rs  tcp.rs  updater.rs
update-server-app/: app.js  index.html  main.js  preload.js  styles.css
