[package]
name = "ftserialtool"
version = "1.2.12"
edition = "2021"
description = "FT Serial Protocol Workbench"
authors = ["L.S"]

[lib]
name = "ftserialtool_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
anyhow = "1"
regex = "1"
urlencoding = "2"
opener = "0.7"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
